<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ECEAEA">

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/menu"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llPizza1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMenu"
        android:gravity="center_vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="110dp"
            android:text="@string/margarita"
            android:textSize="20sp"
            android:layout_marginStart="25dp"/>

        <ImageView
            android:id="@+id/img1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/img1"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPizza2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPizza1"
        android:gravity="center_vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="110dp"
            android:text="@string/mashroom"
            android:textSize="20sp"
            android:layout_marginStart="25dp"/>

        <ImageView
            android:id="@+id/img2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/img2"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPizza3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPizza2"
        android:gravity="center_vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="110dp"
            android:text="@string/pepperoni"
            android:textSize="20sp"
            android:layout_marginStart="25dp"/>

        <ImageView
            android:id="@+id/img3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/img3"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="30dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>